# scripture-study

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  go.work  go.work.sum  intent.yaml  rebuild.ps1  reindex-scriptures.ps1
projects/pg-ai-stewards/extension/: .dockerignore  .env.example  .gitignore  2-6a-workstreams.sql  2-6b-todos.sql  2-6c-phases-context.sql  2-7a-watchman-substrate.sql  2-7b1-watchman-automation.sql  2-7b2-watchman-scheduler.sql  2-7b3-watchman-budget.sql  2-7b4-watchman-soak-prep.sql  3a-watchman-pass.sql  3c1-pipelines-work-items.sql  3c2-5-study-tools.sql  3c2-work-item-advance-trigger.sql  3c3-1-trigger-bugfixes.sql  3c3-3-agent-tool-perms-provenance.sql  3c3-5-work-items-to-studies.sql  3c3-stage-templating-and-study-write.sql  3e2-1-mcp-bridge-schemas.sql  3e2-2-mcp-proxy-dispatch.sql  3e2-3-mcp-tool-cache-promote.sql  3e2-4-fetch-md-seed.sql  3e2-5-broaden-mcp-grants.sql  3e2-6-mcp-servers-linux-paths.sql  3e2-7-git-mcp-seed.sql  4a-cost-tracking.sql  4a-escalation-chain.sql  4a-steward.sql  4b-dispatch-override.sql  4c-steward-dispatch.sql  4d-steward-realign.sql  4g-ad-hoc-cost.sql  5a-maturity-gate.sql  5b-scenarios-verify.sql  5c-sessions-gate-kind.sql  5d-intents-covenants.sql  5d2-seed-fns.sql  5d3-compose-with-intent.sql  5d4-backfill-intent.sql  (+218 more)
projects/pg-ai-stewards/extension/init/: 00-extensions.sql  01-seed-workstreams.sql
projects/pg-ai-stewards/extension/scripts/: bump-extension.sh  ct2-run2-driver.sh  normalize-journals.ps1  run-verify-suite.ps1
projects/pg-ai-stewards/extension/smoke/: g45-cleanup.sql  g45-lesson-resolution-triggers.sql  h1-0-overrides.sql  h1-2-pipeline-and-dispatch.sql  h1-4-first-real-run.sql  h1-4-halt.sql  h1-4-recovery.sql  h1-5a-soft-fail.sql  h1-5d-materialize.sql  h1-5d-retry.sql  h1-6-1-maturity-hook.sql  h1-6-2-verified-trigger.sql  h1-6-5-full-auto-e2e.sql  h1-6-6-strip-prefix.sql  smoke-es8.sql  (+27 more)
(+3495 files in other folders)
