[package]
name = "pg_ai_stewards"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.0"

[dev-dependencies]
pgrx-tests = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
