[package]
name = "pg_ai_stewards"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP client for the bgworker. The worker is already a sync
# loop (one item per tick), so we don't need a tokio runtime — blocking
# reqwest under the covers spins its own. rustls-tls avoids the need
# for libssl-dev in the runtime image.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
pgrx-tests = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
